There are some changes to make, but this is very close.


version 4	6 minutes dev	3 minute code gen	3 minute test		1 hour 1 min total

This was quick and easy... but minor. The lineup of the words is centered, both vertically and
horizontally. It is good. Minor UI changes are made... it's the nature of the tool.


version X	7 minutes dev	4 minute code gen	3 minute test		1 hour 15 min total

DID NOT PROCEED - RETURNING TO VERSION 4 ON NEXT ATTEMPT
Two changes. 1) increased words from 100 to 200. 2) move the end of the game UI below the guessed 
letters. The initial new list had multiple bugs: words ending in 1, words with a lower-case number.
It offered a prompt to implement with a specific library. I tried it. Before generating code, the 
following question itself contained typos. I updated the word list to try again. It appeared to try
it, and totally changed the UI. Reverted, and just updated the end of game UI.


version 5	2 minutes dev	1 minute code gen	2 minute test		1 hour 20 min total

Trying more simple changes at a time. This time, just make the end of game appear below the guessed
letters. This worked, as expected, for when player wins or loses. I will commit and move one!


version 6	4 minutes dev	1 minute code gen	2 minute test		1 hour 27 min total

Same as last time, simple changes. Today, remove underlines for correctly guessed letters. First
change worked!


version 7	8 minutes dev	3 minute code gen	3 minute test		1 hour 41 min total

Same as last time, a simple change. For this one, increase the list of 100 words to 200. This was 
not easy! It would require follow-up questions, it would change the look and feel. Unnecessary.
I had it generate code with 200 words, and pasted it to version 6.


TODO a quick look contains some dubious Top 5000 words. ZIGZAGLY comes to mind. Fix, manually or AI?
TODO some people like the guesses shown in alpha order. Some like chrono. Support switching; start
	with chrono


