@@ -124,7 +124,7 @@
 
 <script>
 /* ------------------------------
-   200 COMMON, 6–10 LETTER WORDS
+   200 COMMON, 6–10 LETTER WORDS - override by JJ: this wasn't 200, it's 323)
    ------------------------------ */
 const WORDS = [
 "ACCOUNT","ACQUIRE","ADDRESS","ADVICE","ALMOST","AMOUNT","ANALYST","ANCIENT","ANYONE","ARRIVE",
@@ -133,13 +133,13 @@ const WORDS = [
 "CHANCE","CHAPTER","CHARITY","CHEMIST","CHOSEN","CIRCUIT","CITIZEN","CLIMATE","CLOTHES","COLLEGE",
 "COMFORT","COMMAND","COMPANY","COMPLETE","CONCEPT","CONCERN","CONFIRM","CONNECT","CONSIST","CONTACT",
 "CONTAIN","CONTENT","CONTEXT","CONTROL","CONVERT","CORRECT","COUNTRY","COUPLE","COURAGE","COURSE",
-"COVERED","CREATOR","CRITICAL","CURRENT","CUSTOMS","DAMAGE","DANGER","DEBATE","DECENT","DECIDE",
+"COVERED","CREATOR","CRITICAL","CURRENT","CUSTOMS","DAMAGE","DANGEROUS","DEBATE","DECENT","DECIDE",
 "DECLARE","DEFINE","DELIVER","DELIGHT","DENSITY","DEPART","DEPOSIT","DESERT","DESIGN","DESIRE",
 "DETAILS","DEVELOP","DEVICE","DIAMOND","DIFFER","DIGITAL","DIRECT","DISCUSS","DISPLAY","DISTANT",
 "DISTRICT","DRIVER","EDITION","ELEMENT","EMOTION","EMPIRE","EMPLOY","ENFORCE","ENOUGH","ENSURE",
 "ENTIRE","ERASED","EVIDENT","EXAMPLE","EXCLUDE","EXPECT","EXPERT","EXPLAIN","EXPLORE","EXTEND",
 "EXTREME","FACTORY","FAILURE","FASHION","FEATURE","FEELING","FELLOW","FEMALE","FIGURE","FINALLY",
-"FINANCE","FINGER","FOREIGN","FOREST","FORWARD","FOUNDED","FREEDOM","FRIENDS","FUNCTION","GARDENS",
+"FINANCE","FINGER","FOREIGN","FOREST","FORWARD","FOUNDATION","FREEDOM","FRIENDS","FUNCTION","GARDENS",
 "GENERAL","GENETIC","GENUINE","GOVERN","GRADUAL","GRANTED","GRAVITY","GROUND","HARMONY","HEALTHY",
 "HEARING","HELPFUL","HISTORY","HONESTY","HOUSING","HUMANITY","HUNTERS","IMAGINE","IMPACT","IMPOSED",
 "IMPULSE","INCLUDE","INDUSTRY","INITIAL","INQUIRE","INSIGHT","INSPIRE","INTENSE","INTEREST","INTERNAL",
@@ -159,7 +159,10 @@ const WORDS = [
 "TRAINER","TRANSFER","TRIANGLE","TROUBLE","ULTIMATE","UNABLE","UNIFORM","UNITED","UNIVERSITY","UPCOMING",
 "USUALLY","VACATION","VALIDATE","VARIOUS","VEHICLE","VERTICAL","VISION","VISIBLE","VOLCANO","WARMTH",
 "WEALTHY","WEATHER","WELCOME","WHATEVER","WHEREAS","WHETHER","WITNESS","WORKING","WRITING","YELLOW",
-"YOUNGER","ZIGZAGLY","ZOOTONIC"
+"YOUNGER",
+"ANXIETY","BENEATH","CONSUME","CONTRACT","DELIVER","DISCOVER","DRAINAGE","EDUCATE","ELECTION","ENJOYED",
+"EXCITED","FICTION","FORTUNE","GALLERY","HOLIDAY","HOSPITAL","IMPROVE","PERHAPS","RAILWAY","SECTION",
+"WITHOUT"
 ];
 
 /* State */
